--- a/css/styles.css
+++ b/css/styles.css
@@ -110,7 +110,6 @@ nav h1 a {
   background-color: #3397DB;
   align-items: center;
   display: flex;
-  flex-wrap: wrap;
 }
 .filter-options h2 {
   color: white;
@@ -118,38 +117,43 @@ nav h1 a {
   font-weight: normal;
   line-height: 1;
   margin: 0 20px;
+  flex: 1;
 }
 .filter-options select {
   background-color: white;
   border: 1px solid #fff;
   font-family: Arial,sans-serif;
-  font-size: 10%;
+  font-size: 1rem;
   height: 35px;
   letter-spacing: 0;
-  margin: 10px;
+  margin: 20px;
   padding: 0 10px;
-  flex: 1;
   width: 100%;
+  flex: 1;
 }
 
 /* ====================== Restaurant Listing ====================== */
+
 #restaurants-list {
   background-color: #f3f3f3;
   list-style: outside none none;
-  margin: 0;
-  padding: 30px 15px 60px;
-  text-align: center;
+  padding: 30px 25px 60px;
+  text-align: left;
+  display: flex;
+  flex-wrap: wrap;
 }
 #restaurants-list li {
   background-color: #fff;
   border: 2px solid #ccc;
   font-family: Arial,sans-serif;
-  margin: 15px;
   min-height: 380px;
-  padding: 0 30px 25px;
+  padding: 0 10px 25px;
+  margin: 5px 20px;
   text-align: left;
-  width: 270px;
+  width: 25%;
 }
+
+
 #restaurants-list .restaurant-img {
   background-color: #ccc;
   display: block;
@@ -276,3 +280,56 @@ nav h1 a {
 #restaurant-hours td {
   color: #666;
 }
+
+
+/* ====================== responsive ====================== */
+
+
+@media screen and (max-width: 500px) {
+	#restaurants-list li {
+    width: 100%;
+    margin: 5px 0;
+  }
+  .filter-options {
+    display: inline-block;
+    height: 100%;
+  }
+  .filter-options h2 {
+    padding: 5px;
+    text-align: center;
+    font-size: 2em;
+    
+  }
+  .filter-options select{
+    display: block;
+    flex: 1;
+    width:300px;
+    margin: 5px auto 5px auto;
+  }
+}
+
+@media screen and (min-width: 501px) and (max-width: 1023px) {
+	#restaurants-list li {
+    width: 40%; 
+  }
+  .filter-options select {
+    background-color: white;
+    border: 1px solid #fff;
+    font-family: Arial,sans-serif;
+    font-size: 1rem;
+    height: 35px;
+    letter-spacing: 0;
+    margin: 20px;
+    padding: 0 10px;
+    width: 100%;
+    flex: 1;
+  }
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1100px) {
+	#restaurants-list li {
+    width: 43%;
+  }
+}
+
+
