--- a/css/styles.css
+++ b/css/styles.css
@@ -211,8 +211,8 @@ nav h1 a {
 }
 .inside #footer {
   bottom: 0;
-  position: absolute;
-  width: 100%;
+  position: relative;
+  width: auto;
 }
 #restaurant-name {
   color: #f18200;
@@ -225,7 +225,7 @@ nav h1 a {
   line-height: 1.1;
 }
 #restaurant-img {
-	width: 90%;
+	width: 80%;
 }
 #restaurant-address {
   font-size: 12pt;
@@ -241,7 +241,7 @@ nav h1 a {
   padding: 2px 0;
   text-align: center;
   text-transform: uppercase;
-	width: 90%;
+	width: 80%;
 }
 #restaurant-container, #reviews-container {
   border-bottom: 1px solid #d9d9d9;
@@ -272,7 +272,7 @@ nav h1 a {
   overflow: hidden;
   padding: 0 20px 20px;
   position: relative;
-  width: 85%;
+  width: 86%;
 }
 #reviews-list li p {
   margin: 0 0 10px;
@@ -306,6 +306,40 @@ nav h1 a {
     width:300px;
     margin: 5px auto 5px auto;
   }
+/* ============= inside ============= */
+  #breadcrumb {
+    padding: 10px 40px 16px;
+    list-style: none;
+    background-color: #eee;
+    font-size: 17px;
+    margin: 0;
+    width: 100%;
+  }
+  .inside #map-container {
+    height: 250px;
+    position: relative;
+    top: 140px;
+    width: 100%;
+  }
+  .inside #map {
+    background-color: #ccc;
+    position: relative;
+    height: 100%;
+    width: 100%;
+  }
+  #restaurant-container,
+  #reviews-container {
+    margin: 0 auto;
+    padding: 150px 40px 30px;
+    width: 70%;
+  }
+  #reviews-container {
+    padding: 30px 40px 30px
+  }
+  #restaurant-img {
+    width: 100%;
+  }
+  
 }
 
 @media screen and (min-width: 501px) and (max-width: 1023px) {
@@ -324,6 +358,7 @@ nav h1 a {
     width: 100%;
     flex: 1;
   }
+  
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1100px) {
@@ -332,4 +367,9 @@ nav h1 a {
   }
 }
 
+@media screen and (min-width: 501px) and (max-width: 1100px) {
+	.inside #map-container {
+    width: 45%;
+  }
+}
 
