--- a/css/styles.css
+++ b/css/styles.css
@@ -338,7 +338,9 @@ nav h1 a {
   #restaurant-img {
     width: 100%;
   }
-  
+  #restaurant-cuisine {
+    width: 100%;
+  }
 }
 
 @media screen and (min-width: 501px) and (max-width: 1023px) {
